# auto-mix

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  development_plan.md  docker-compose.yml  pyproject.toml  requirements_python.md
.github/workflows/: ci.yml
automix/: __init__.py  cli.py  gui.py
automix/core/: __init__.py  analyzer.py  audio_loader.py  effects.py  mastering.py  optimizer.py  processor.py
automix/plugins/: __init__.py  base.py  custom_effects.py
automix/storage/: __init__.py  base.py
automix/video/: __init__.py  encoder.py  text_overlay.py  visualizer.py
automix/web/: __init__.py  app.py  cli.py
automix/web/static/: app.js  index.html  style.css
deploy/: README.md  fly.toml  free-tier-optimization.md  railway.toml  render.yaml
deploy/google-cloud-run/: cloudbuild.yaml  setup.sh
deploy/render/: render.yaml  setup.md
samples/: custom_config.yaml  demo_lyrics.srt  generate_test_audio.py
tests/: conftest.py  test_analyzer.py  test_audio_loader.py  test_cli.py  test_effects.py  test_mastering.py  test_processor.py  test_video.py
tests/integration/: test_integration.py
